--- a/Tubes_B/main.ipynb
+++ b/Tubes_B/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,19 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Layer 1\n",
-      "Biases: [0.1    0.2    0.2625]\n",
-      "Weights: [[ 0.400125 -0.49725   0.6     ]\n",
-      " [ 0.69975   0.7945   -0.9     ]]\n",
-      "Activations: relu\n",
-      "\n"
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (2,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    186\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 188\u001b[1;33m     \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    177\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    178\u001b[0m     \u001b[1;31m# train model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 179\u001b[1;33m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m     \u001b[1;31m# print model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, X, y_true, learning_rate, epochs, batch_size)\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m                 \u001b[1;31m# backward propagation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward_propagation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m             \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36mbackward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactivations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'sigmoid'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m                 \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_m\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msigmoid_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer_outputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactivations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'relu'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m                 \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_m\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer_outputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (2,2) "
      ]
     }
    ],
@@ -166,7 +168,8 @@
     "\n",
     "        # calculate gradient for the other layers\n",
     "        for i in range(n_layers - 2, -1, -1):\n",
-    "            gradient = np.dot(self.layer_outputs[i].T, error) / n_samples\n",
+    "            X_with_bias = np.concatenate((X, np.tile([1], (X.shape[0], 1)).reshape(X.shape[0], 1)), axis=1)\n",
+    "            gradient = np.dot(error.T, X_with_bias)\n",
     "            weight_gradient = gradient[:, :-1]\n",
     "            bias_gradient = gradient[:, -1:]\n",
     "\n",
@@ -176,9 +179,8 @@
     "            new_m = np.append(self.weights[i], [self.biases[i]], axis=0)\n",
     "            \n",
     "            if self.activations[i] == 'sigmoid':\n",
-    "                error = np.dot(error, self.weights[i].T) * self.model.sigmoid_gradient(self.layer_outputs[i])\n",
+    "                error = np.dot(error, new_m.T) * self.model.sigmoid_gradient(self.layer_outputs[i])\n",
     "            elif self.activations[i] == 'relu':\n",
-    "                new_m = np.append(self.weights[i], [self.biases[i]], axis=0)\n",
     "                error = np.dot(error, new_m.T) * self.model.relu_gradient(self.layer_outputs[i])\n",
     "            elif self.activations[i] == 'linear':\n",
     "                error = np.dot(error, new_m.T) * self.model.linear_gradient(self.layer_outputs[i])\n",
@@ -283,21 +285,21 @@
     "def main():\n",
     "    # load model\n",
     "    # filename = input(\"Enter the filename: \")\n",
-    "    filename = 'relu'\n",
+    "    filename = 'linear'\n",
     "    model_path = filename + '.json'\n",
     "    model = FFNN(model_path)\n",
     "\n",
     "    # visualize input layer\n",
-    "    X_train = np.array([[-1.0, 0.5], [0.5, -1.0]])\n",
-    "    Y_train = np.array([[0.1, 1.0, 0.1], [0.1, 0.1, 1.0]])\n",
+    "    # X_train = np.array([[-1.0, 0.5], [0.5, -1.0]])\n",
+    "    # Y_train = np.array([[0.1, 1.0, 0.1], [0.1, 0.1, 1.0]])\n",
     "\n",
     "    # input sigmoid\n",
     "    # X_train = np.array([[0.0, 0.0], [0.0, 0.1], [1.0, 0.0], [1.0, 1.0]])\n",
     "    # Y_train = np.array([[0.1, 1.0], [1.0, 0.0], [1.0, 1.0], [0.0, 0.0]])\n",
     "\n",
     "    # input linear\n",
-    "    # X_train = np.array([[3.0, 1.0], [1.0, 2.0]])\n",
-    "    # Y_train = np.array([[ 2.0,  0.3, -1.9], [ 1.3, -0.7,  0.1]])\n",
+    "    X_train = np.array([[3.0, 1.0], [1.0, 2.0]])\n",
+    "    Y_train = np.array([[ 2.0,  0.3, -1.9], [ 1.3, -0.7,  0.1]])\n",
     "    \n",
     "\n",
     "    # train model\n",
