--- a/Tubes_B/main.ipynb
+++ b/Tubes_B/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,11 +30,18 @@
     "        self.weights = []\n",
     "        self.biases = []\n",
     "        self.activations = []\n",
+    "        self.input = []\n",
+    "        self.target = []\n",
     "        self.sigmoid_gradient = lambda x: x * (1. - x)\n",
     "        self.relu_gradient = lambda x: 1. * (x > 0)\n",
     "        self.linear_gradient = lambda x: np.ones_like(x)\n",
     "        self.tanh_gradient = lambda x: 1 - np.tanh(x)**2\n",
     "        self.softmax_gradient = lambda x: x * (1. - x)\n",
+    "        self.learning_rate = model_data['learning_parameters']['learning_rate']\n",
+    "        self.batch_size = model_data['learning_parameters']['batch_size']\n",
+    "        self.epochs = model_data['learning_parameters']['max_iteration']\n",
+    "        self.error = model_data['learning_parameters']['error_threshold']\n",
+    "        \n",
     "        \n",
     "        for i in range(1, n_layers):\n",
     "            layer = layers[i]\n",
@@ -44,29 +51,52 @@
     "                weight = np.array(layer['weight']).astype(np.float64)\n",
     "                bias = np.array(layer['bias']).astype(np.float64)\n",
     "                activation = layer['activation_function']\n",
+    "                input_layer = layer['input']\n",
+    "                target = layer['target']\n",
     "                \n",
     "                self.weights.append(weight)\n",
     "                self.biases.append(bias)\n",
     "                self.activations.append(activation)\n",
+    "                self.input.append(input_layer)\n",
+    "                self.target.append(target)\n",
     "                \n",
     "            elif layer['tipe'] == 'output':\n",
     "                n_neurons = layer['n_neuron']\n",
     "                weight = np.array(layer['weight']).astype(np.float64)\n",
     "                bias = np.array(layer['bias']).astype(np.float64)\n",
     "                activation = layer['activation']\n",
+    "                input_layer = layer['input']\n",
+    "                target = layer['target']\n",
     "                \n",
     "                self.weights.append(weight)\n",
     "                self.biases.append(bias)\n",
     "                self.activations.append(activation)\n",
-    "                \n",
+    "                self.input.append(input_layer)\n",
+    "                self.target.append(target)\n",
+    "    \n",
     "    def get_weights(self):\n",
     "        return self.weights\n",
     "    \n",
     "    def get_biases(self):\n",
     "        return self.biases\n",
     "    \n",
+    "    def get_input(self):\n",
+    "        return self.input\n",
+    "    \n",
+    "    def get_target(self):\n",
+    "        return self.target\n",
+    "    \n",
     "    def get_activations(self):\n",
     "        return self.activations\n",
+    "    \n",
+    "    def get_learning_rate(self):\n",
+    "        return self.learning_rate\n",
+    "    \n",
+    "    def get_batch_size(self):\n",
+    "        return self.batch_size\n",
+    "    \n",
+    "    def get_epochs(self):\n",
+    "        return self.epochs\n",
     "    \n",
     "    def get_layer(self, layer):\n",
     "        return self.weights[layer], self.biases[layer], self.activations[layer]\n",
@@ -98,15 +128,15 @@
     "    def print_model(self):\n",
     "        for i in range(len(self.weights)):\n",
     "            print('Layer', i+1)\n",
-    "            print('Biases:', self.biases[i])\n",
-    "            print('Weights:', self.weights[i])\n",
-    "            print('Activations:', self.activations[i])\n",
+    "            print(self.biases[i])\n",
+    "            print(self.weights[i])\n",
+    "            print(self.activations[i])\n",
     "            print('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -116,10 +146,10 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    186\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    187\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 188\u001b[1;33m     \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    177\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    178\u001b[0m     \u001b[1;31m# train model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 179\u001b[1;33m     \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    180\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    181\u001b[0m     \u001b[1;31m# print model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, X, y_true, learning_rate, epochs, batch_size)\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m                 \u001b[1;31m# backward propagation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward_propagation\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_batch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m             \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25604/4066930273.py\u001b[0m in \u001b[0;36mbackward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     53\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactivations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'sigmoid'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 55\u001b[1;33m                 \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_m\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msigmoid_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer_outputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     56\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactivations\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'relu'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m                 \u001b[0merror\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_m\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu_gradient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer_outputs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "Cell \u001b[1;32mIn[306], line 186\u001b[0m\n\u001b[0;32m    182\u001b[0m     \u001b[39m# draw network\u001b[39;00m\n\u001b[0;32m    183\u001b[0m     \u001b[39m# model.draw_network()\u001b[39;00m\n\u001b[0;32m    185\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m--> 186\u001b[0m     main()\n",
+      "Cell \u001b[1;32mIn[306], line 177\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    174\u001b[0m Y_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(Y_train)\n\u001b[0;32m    176\u001b[0m \u001b[39m# train model\u001b[39;00m\n\u001b[1;32m--> 177\u001b[0m model\u001b[39m.\u001b[39;49mtrain(X_train, Y_train, model\u001b[39m.\u001b[39;49mlearning_rate, model\u001b[39m.\u001b[39;49mepochs, model\u001b[39m.\u001b[39;49mbatch_size)\n\u001b[0;32m    179\u001b[0m \u001b[39m# print model\u001b[39;00m\n\u001b[0;32m    180\u001b[0m model\u001b[39m.\u001b[39mprint_model()\n",
+      "Cell \u001b[1;32mIn[306], line 83\u001b[0m, in \u001b[0;36mFFNN.train\u001b[1;34m(self, X, y_true, learning_rate, epochs, batch_size)\u001b[0m\n\u001b[0;32m     80\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforward_propagation(X_batch)\n\u001b[0;32m     82\u001b[0m     \u001b[39m# backward propagation\u001b[39;00m\n\u001b[1;32m---> 83\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbackward_propagation(X_batch, y_batch, learning_rate)\n\u001b[0;32m     85\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpredict(X)\n\u001b[0;32m     86\u001b[0m loss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmean((y_pred \u001b[39m-\u001b[39m y_true) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[306], line 60\u001b[0m, in \u001b[0;36mFFNN.backward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     57\u001b[0m new_m \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweights[i], [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbiases[i]], axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m     59\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivations[i] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msigmoid\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> 60\u001b[0m     error \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(error, new_m\u001b[39m.\u001b[39;49mT) \u001b[39m*\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49msigmoid_gradient(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlayer_outputs[i])\n\u001b[0;32m     61\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivations[i] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     62\u001b[0m     error \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(error, new_m\u001b[39m.\u001b[39mT) \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel\u001b[39m.\u001b[39mrelu_gradient(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer_outputs[i])\n",
       "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (2,2) "
      ]
     }
@@ -131,6 +161,11 @@
     "        self.weights = self.model.get_weights()\n",
     "        self.biases = self.model.get_biases()\n",
     "        self.activations = self.model.get_activations()\n",
+    "        self.input = self.model.get_input()\n",
+    "        self.target = self.model.get_target()\n",
+    "        self.learning_rate = self.model.get_learning_rate()\n",
+    "        self.batch_size = self.model.get_batch_size()\n",
+    "        self.epochs = self.model.get_epochs()\n",
     "\n",
     "    def forward_propagation(self, X):\n",
     "        input_layer = X\n",
@@ -285,25 +320,18 @@
     "def main():\n",
     "    # load model\n",
     "    # filename = input(\"Enter the filename: \")\n",
-    "    filename = 'linear'\n",
+    "    filename = 'sigmoid'\n",
     "    model_path = filename + '.json'\n",
     "    model = FFNN(model_path)\n",
-    "\n",
-    "    # visualize input layer\n",
-    "    # X_train = np.array([[-1.0, 0.5], [0.5, -1.0]])\n",
-    "    # Y_train = np.array([[0.1, 1.0, 0.1], [0.1, 0.1, 1.0]])\n",
-    "\n",
-    "    # input sigmoid\n",
-    "    # X_train = np.array([[0.0, 0.0], [0.0, 0.1], [1.0, 0.0], [1.0, 1.0]])\n",
-    "    # Y_train = np.array([[0.1, 1.0], [1.0, 0.0], [1.0, 1.0], [0.0, 0.0]])\n",
-    "\n",
-    "    # input linear\n",
-    "    X_train = np.array([[3.0, 1.0], [1.0, 2.0]])\n",
-    "    Y_train = np.array([[ 2.0,  0.3, -1.9], [ 1.3, -0.7,  0.1]])\n",
     "    \n",
-    "\n",
+    "    # input linear\n",
+    "    X_train = model.input[0]\n",
+    "    Y_train = model.target[0]\n",
+    "    X_train = np.array(X_train)\n",
+    "    Y_train = np.array(Y_train)\n",
+    "    \n",
     "    # train model\n",
-    "    model.train(X_train, Y_train, learning_rate=0.1, epochs=1, batch_size=2)\n",
+    "    model.train(X_train, Y_train, model.learning_rate, model.epochs, model.batch_size)\n",
     "\n",
     "    # print model\n",
     "    model.print_model()\n",
