--- a/Tubes_B/main.ipynb
+++ b/Tubes_B/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,21 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (2,3) (2,2) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[306], line 186\u001b[0m\n\u001b[0;32m    182\u001b[0m     \u001b[39m# draw network\u001b[39;00m\n\u001b[0;32m    183\u001b[0m     \u001b[39m# model.draw_network()\u001b[39;00m\n\u001b[0;32m    185\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m--> 186\u001b[0m     main()\n",
-      "Cell \u001b[1;32mIn[306], line 177\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m    174\u001b[0m Y_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(Y_train)\n\u001b[0;32m    176\u001b[0m \u001b[39m# train model\u001b[39;00m\n\u001b[1;32m--> 177\u001b[0m model\u001b[39m.\u001b[39;49mtrain(X_train, Y_train, model\u001b[39m.\u001b[39;49mlearning_rate, model\u001b[39m.\u001b[39;49mepochs, model\u001b[39m.\u001b[39;49mbatch_size)\n\u001b[0;32m    179\u001b[0m \u001b[39m# print model\u001b[39;00m\n\u001b[0;32m    180\u001b[0m model\u001b[39m.\u001b[39mprint_model()\n",
-      "Cell \u001b[1;32mIn[306], line 83\u001b[0m, in \u001b[0;36mFFNN.train\u001b[1;34m(self, X, y_true, learning_rate, epochs, batch_size)\u001b[0m\n\u001b[0;32m     80\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforward_propagation(X_batch)\n\u001b[0;32m     82\u001b[0m     \u001b[39m# backward propagation\u001b[39;00m\n\u001b[1;32m---> 83\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbackward_propagation(X_batch, y_batch, learning_rate)\n\u001b[0;32m     85\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpredict(X)\n\u001b[0;32m     86\u001b[0m loss \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmean((y_pred \u001b[39m-\u001b[39m y_true) \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m \u001b[39m2\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[306], line 60\u001b[0m, in \u001b[0;36mFFNN.backward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     57\u001b[0m new_m \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweights[i], [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbiases[i]], axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m     59\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivations[i] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msigmoid\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> 60\u001b[0m     error \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mdot(error, new_m\u001b[39m.\u001b[39;49mT) \u001b[39m*\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49msigmoid_gradient(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlayer_outputs[i])\n\u001b[0;32m     61\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivations[i] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     62\u001b[0m     error \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdot(error, new_m\u001b[39m.\u001b[39mT) \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel\u001b[39m.\u001b[39mrelu_gradient(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayer_outputs[i])\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (2,2) "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 1\n",
+      "[0.10061658 0.19748577]\n",
+      "[[0.4        0.5       ]\n",
+      " [0.90112145 0.09863434]]\n",
+      "sigmoid\n",
+      "\n"
      ]
     }
    ],
@@ -214,6 +212,7 @@
     "            new_m = np.append(self.weights[i], [self.biases[i]], axis=0)\n",
     "            \n",
     "            if self.activations[i] == 'sigmoid':\n",
+    "                new_m = np.ones_like(self.layer_outputs[i])\n",
     "                error = np.dot(error, new_m.T) * self.model.sigmoid_gradient(self.layer_outputs[i])\n",
     "            elif self.activations[i] == 'relu':\n",
     "                error = np.dot(error, new_m.T) * self.model.relu_gradient(self.layer_outputs[i])\n",
