--- a/Tubes_B/main.ipynb
+++ b/Tubes_B/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -144,10 +144,10 @@
      "output_type": "stream",
      "text": [
       "Layer 1\n",
-      "[0.10061658 0.19748577]\n",
-      "[[0.4        0.5       ]\n",
-      " [0.90112145 0.09863434]]\n",
-      "sigmoid\n",
+      "[0.1 0.2]\n",
+      "[[ 0.3861139  -0.48568122]\n",
+      " [ 0.7138861   0.78568122]]\n",
+      "softmax\n",
       "\n"
      ]
     }
@@ -319,7 +319,7 @@
     "def main():\n",
     "    # load model\n",
     "    # filename = input(\"Enter the filename: \")\n",
-    "    filename = 'sigmoid'\n",
+    "    filename = 'softmax'\n",
     "    model_path = filename + '.json'\n",
     "    model = FFNN(model_path)\n",
     "    \n",
