--- a/Tubes_B/main.ipynb
+++ b/Tubes_B/main.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Import Some Libraries\n",
     "import json\n",
-    "import numpy as np\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -144,10 +142,10 @@
      "output_type": "stream",
      "text": [
       "Layer 1\n",
-      "[0.1 0.2]\n",
-      "[[ 0.3861139  -0.48568122]\n",
-      " [ 0.7138861   0.78568122]]\n",
-      "softmax\n",
+      "[0.105 0.19  0.25 ]\n",
+      "[[ 0.395  -0.49    0.575 ]\n",
+      " [ 0.7025  0.795  -0.85  ]]\n",
+      "relu\n",
       "\n"
      ]
     }
@@ -209,18 +207,6 @@
     "            self.weights[i] -= learning_rate * weight_gradient.T\n",
     "            self.biases[i] -= learning_rate * (bias_gradient.T)[0]\n",
     "\n",
-    "            new_m = np.append(self.weights[i], [self.biases[i]], axis=0)\n",
-    "            \n",
-    "            if self.activations[i] == 'sigmoid':\n",
-    "                new_m = np.ones_like(self.layer_outputs[i])\n",
-    "                error = np.dot(error, new_m.T) * self.model.sigmoid_gradient(self.layer_outputs[i])\n",
-    "            elif self.activations[i] == 'relu':\n",
-    "                error = np.dot(error, new_m.T) * self.model.relu_gradient(self.layer_outputs[i])\n",
-    "            elif self.activations[i] == 'linear':\n",
-    "                error = np.dot(error, new_m.T) * self.model.linear_gradient(self.layer_outputs[i])\n",
-    "            elif self.activations[i] == 'softmax':\n",
-    "                error = np.dot(error, self.weights[i].T) * self.model.softmax_gradient(self.layer_outputs[i])\n",
-    "\n",
     "    def train(self, X, y_true, learning_rate, epochs, batch_size):\n",
     "        for epoch in range(epochs):\n",
     "            # shuffle the training data\n",
@@ -262,64 +248,11 @@
     "    def print_model(self):\n",
     "        self.model.print_model()\n",
     "\n",
-    "    def draw_network(self):\n",
-    "        G = nx.DiGraph()\n",
-    "\n",
-    "        pos = {}\n",
-    "\n",
-    "        # add nodes\n",
-    "        input_nodes = [f'X_{i + 1}' for i in range(len(self.weights[0]))]\n",
-    "        G.add_nodes_from(input_nodes, layer='Input')\n",
-    "        G.add_nodes_from(['b0'], layer='Bias')\n",
-    "        for i in range(len(input_nodes)):   \n",
-    "            pos[f'X_{i + 1}'] = [0, i + 1]\n",
-    "        pos['b0'] = [0, len(self.weights[0]) + 1]\n",
-    "\n",
-    "        hidden_nodes = []\n",
-    "\n",
-    "        for i in range(len(self.weights) - 1):\n",
-    "            hidden_nodes.append([f'h{i + 1}_{j + 1}' for j in range(len(self.weights[i][0]))])\n",
-    "            G.add_nodes_from(hidden_nodes[i], layer='Hidden')\n",
-    "            G.add_nodes_from([f'b{i + 1}'], layer='Bias')\n",
-    "            for j in range(len(hidden_nodes[i])):\n",
-    "                pos[f'h{i + 1}_{j + 1}'] = [i + 1, j + 1]\n",
-    "            pos[f'b{i + 1}'] = [i + 1, len(self.weights[i][0]) + 1]\n",
-    "\n",
-    "        output_nodes = [f'y_{i + 1}' for i in range(len(self.weights[-1][0]))]\n",
-    "        G.add_nodes_from(output_nodes, layer='Output')\n",
-    "        for i in range(len(output_nodes)):\n",
-    "            pos[f'y_{i + 1}'] = [len(self.weights), i + 1]\n",
-    "\n",
-    "        # add edges\n",
-    "        for i in range(len(self.weights)):\n",
-    "            for j in range(len(self.weights[i])):\n",
-    "                for k in range(len(self.weights[i][j])):\n",
-    "                    if i == 0:\n",
-    "                        G.add_edge(input_nodes[j], hidden_nodes[i][k], weight=self.weights[i][j][k])\n",
-    "                        G.add_edge(f'b0', hidden_nodes[i][k], weight=self.biases[i][k])\n",
-    "                    elif i == len(self.weights) - 1:\n",
-    "                        G.add_edge(hidden_nodes[i - 1][j], output_nodes[k], weight=self.weights[i][j][k])\n",
-    "                        G.add_edge(f'b{i}', output_nodes[k], weight=self.biases[i][k])\n",
-    "                    else:\n",
-    "                        G.add_edge(hidden_nodes[i - 1][j], hidden_nodes[i][k], weight=self.weights[i][j][k])\n",
-    "                        G.add_edge(f'b{i}', hidden_nodes[i][k], weight=self.biases[i][k])\n",
-    "\n",
-    "        # draw network\n",
-    "        edge_labels = nx.get_edge_attributes(G, 'weight')\n",
-    "\n",
-    "        nx.draw_networkx_nodes(G, pos, node_size=1500, node_color='lightblue')\n",
-    "        nx.draw_networkx_edges(G, pos, width=2, edge_color='black', arrows=True, arrowsize=25)\n",
-    "        nx.draw_networkx_edge_labels(G, pos, edge_labels=edge_labels, label_pos=0.60)\n",
-    "        nx.draw_networkx_labels(G, pos, font_size=12, font_family='sans-serif')\n",
-    "        plt.axis('off')\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
     "# main function\n",
     "def main():\n",
     "    # load model\n",
     "    # filename = input(\"Enter the filename: \")\n",
-    "    filename = 'softmax'\n",
+    "    filename = 'relu'\n",
     "    model_path = filename + '.json'\n",
     "    model = FFNN(model_path)\n",
     "    \n",
@@ -334,9 +267,6 @@
     "\n",
     "    # print model\n",
     "    model.print_model()\n",
-    "\n",
-    "    # draw network\n",
-    "    # model.draw_network()\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
