--- a/Tubes_B/main2.ipynb
+++ b/Tubes_B/main2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2eda05e2",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "27702add",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8e909427",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
     "def main():\n",
     "    # load model\n",
     "    # filename = input(\"Enter the filename: \")\n",
-    "    filename = 'mlp'\n",
+    "    filename = 'linear'\n",
     "    model_path = filename + '.json'\n",
     "    model = FFNN(model_path)\n",
     "    model.print_model()\n",
@@ -369,14 +369,6 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c62e945c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -395,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
